<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DashboardFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/numero_de_filmes_vistos"
                    android:textSize="16sp"
                    android:layout_marginBottom="6dp"
                    app:drawableLeftCompat="@drawable/ic_counter_dashboard" />

                <TextView
                    android:id="@+id/tv_counter_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:text="@string/zero"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/categoria_favorita"
                    android:textSize="16sp"
                    android:layout_marginBottom="6dp"
                    app:drawableLeftCompat="@drawable/ic_category_dashboard" />

                <TextView
                    android:id="@+id/tv_most_watched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:text="@string/no_category"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registe_o_seu_filme_aqui"
            android:textSize="16sp"
            android:layout_marginBottom="6dp"
            app:drawableLeftCompat="@drawable/ic_registration_dashboard" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/registo_de_filme"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinemas_perto_de_si"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_map_dashboard" />

        <LinearLayout
            android:id="@+id/ll_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="25dp"
            >

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:clickable="false"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
