<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_filme_required"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/nome_do_filme"
            app:helperTextTextColor="@android:color/darker_gray"
            app:helperTextEnabled="false"
            app:startIconContentDescription="descricao do icon"
            app:startIconDrawable="@drawable/ic_input_nome_filme"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_nome_filme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_cinema_required"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/cinema_onde_foi_vizualizado"
            app:helperTextTextColor="@android:color/darker_gray"
            app:startIconContentDescription="descricao do icon"
            app:startIconDrawable="@drawable/ic_cinema"
            app:endIconMode="clear_text">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/tf_nome_cinema"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_avaliacao_required"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/avalia_o_do_filme_1_10"
            android:text="0"
            app:helperTextTextColor="@android:color/darker_gray"
            app:startIconContentDescription="descricao do icon"
            app:startIconDrawable="@drawable/ic_rating_foreground"
            app:endIconMode="clear_text">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_filme_avaliacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_escolher_data"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/data_de_visualiza_o"
            app:helperTextTextColor="@android:color/darker_gray"
            app:startIconContentDescription="descricao do icon"
            app:startIconDrawable="@drawable/ic_calendar"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_escolher_data_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_foto"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/lightPurple"
            android:text="@string/adicionar_foto"
            app:icon="@drawable/ic_add_photo"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_lista_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_observacoes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/observa_es_opcional"
            app:counterEnabled="true"
            app:startIconContentDescription="descricao do icon"
            app:startIconDrawable="@drawable/ic_comment"
            app:counterMaxLength="200"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_observacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="115dp"
                android:maxLength="201"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_submeter"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/lightPurple"
            android:text="@string/submeter" />
    </LinearLayout>
</ScrollView>